crates/djls-project/src/snapshots/djls_project__specs__tests__golden_call_style_no_func_def.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 1092
expression: "snapshot(extract_rules(source, \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
