crates/djls-project/src/snapshots/djls_project__specs__tests__golden_custom_tags.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 619
expression: "snapshot(extract_rules(&source, \"tests.template_tests.templatetags.custom\"))"
---
tag_rules:
  "tests.template_tests.templatetags.custom::tag::context_stack_length":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::current_app":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::escape_explicit":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::escape_format_html":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::escape_naive":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::explicit_no_context":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::minustwo":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: value
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::no_params":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::no_params_with_context":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::one_param":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::params_and_context":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_keyword_only_default":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: kwarg
        required: false
        kind: Keyword
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_keyword_only_param":
    arg_constraints:
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: kwarg
        required: true
        kind: Keyword
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_one_default":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_only_unlimited_args":
    arg_constraints: []
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: args
        required: false
        kind: VarArgs
        position: 0
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_tag_takes_context_without_params":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_tag_without_context_parameter":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_two_params":
    arg_constraints:
      - Min: 3
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: true
        kind: Variable
        position: 1
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_unlimited_args":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
      - name: args
        required: false
        kind: VarArgs
        position: 2
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::simple_unlimited_args_kwargs":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
      - name: args
        required: false
        kind: VarArgs
        position: 2
    as_var: strip
  "tests.template_tests.templatetags.custom::tag::use_l10n":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: strip
filter_arities:
  "tests.template_tests.templatetags.custom::filter::make_data_div":
    expects_arg: false
    arg_optional: false
  "tests.template_tests.templatetags.custom::filter::noop":
    expects_arg: true
    arg_optional: true
  "tests.template_tests.templatetags.custom::filter::trim":
    expects_arg: true
    arg_optional: false
block_specs: {}
