crates/djls-project/src/snapshots/djls_project__specs__tests__golden_defaultfilters.snap
---
source: crates/djls-project/src/specs.rs
expression: "snapshot(extract_rules(&source, \"django.template.defaultfilters\"))"
---
tag_rules: {}
filter_arities:
  "django.template.defaultfilters::filter::add":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::filter::addslashes":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::filter::cut":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::filter::date":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::filter::default":
    expects_arg: true
    arg_optional: false
  "django.template.defaultfilters::filter::escapejs":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::filter::floatformat":
    expects_arg: true
    arg_optional: true
  "django.template.defaultfilters::filter::lower":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::filter::title":
    expects_arg: false
    arg_optional: false
  "django.template.defaultfilters::filter::upper":
    expects_arg: false
    arg_optional: false
block_specs: {}
