crates/djls-project/src/snapshots/djls_project__specs__tests__golden_empty_source.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 1060
expression: "snapshot(extract_rules(\"\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
