crates/djls-project/src/snapshots/djls_project__specs__tests__golden_filter_method_style.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 1035
expression: "snapshot(extract_rules(source, \"app.templatetags.filters\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
