crates/djls-project/src/snapshots/djls_project__specs__tests__golden_inclusion_tags.snap
---
source: crates/djls-project/src/specs.rs
expression: "snapshot(extract_rules(&source,\n\"tests.template_tests.templatetags.inclusion\"))"
---
tag_rules:
  "tests.template_tests.templatetags.inclusion::tag::inclusion_no_params":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "tests.template_tests.templatetags.inclusion::tag::inclusion_no_params_with_context":
    arg_constraints:
      - Max: 1
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args: []
    as_var: keep
  "tests.template_tests.templatetags.inclusion::tag::inclusion_one_default":
    arg_constraints:
      - Min: 2
      - Max: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: one
        required: true
        kind: Variable
        position: 0
      - name: two
        required: false
        kind: Variable
        position: 1
    as_var: keep
  "tests.template_tests.templatetags.inclusion::tag::inclusion_one_param":
    arg_constraints:
      - Min: 2
      - Max: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    extracted_args:
      - name: arg
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs: {}
