crates/djls-project/src/snapshots/djls_project__specs__tests__golden_invalid_python.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 1066
expression: "snapshot(extract_rules(\"def {invalid\", \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
