crates/djls-project/src/snapshots/djls_project__specs__tests__golden_loader_tags.snap
---
source: crates/djls-project/src/specs.rs
expression: "snapshot(extract_rules(&source, \"django.template.loader_tags\"))"
---
tag_rules:
  "django.template.loader_tags::tag::block":
    arg_constraints:
      - Exact: 2
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 2
        message:
          PercentFormat:
            template: "'%s' tag takes only one argument"
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: block_name
        required: true
        kind: Variable
        position: 0
    as_var: keep
  "django.template.loader_tags::tag::include":
    arg_constraints:
      - Min: 2
    required_keywords: []
    choice_at_constraints: []
    known_options:
      values:
        - with
        - only
      allow_duplicates: false
      rejects_unknown: true
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Min: 2
        message:
          PercentFormat:
            template: "%r tag takes at least one argument: the name of the template to be included."
            args:
              - SplitElement:
                  Forward: 0
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
    as_var: keep
filter_arities: {}
block_specs:
  "django.template.loader_tags::tag::block":
    end_tag: endblock
    intermediates: []
    opaque: false
