crates/djls-project/src/snapshots/djls_project__specs__tests__golden_no_registrations.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 1079
expression: "snapshot(extract_rules(source, \"test.module\"))"
---
tag_rules: {}
filter_arities: {}
block_specs: {}
