crates/djls-project/src/snapshots/djls_project__specs__tests__golden_non_bits_variable.snap
---
source: crates/djls-project/src/specs.rs
assertion_line: 1054
expression: "snapshot(extract_rules(source, \"app.templatetags.custom\"))"
---
tag_rules:
  "app.templatetags.custom::tag::custom_tag":
    arg_constraints:
      - Exact: 3
    required_keywords: []
    choice_at_constraints: []
    known_options: ~
    diagnostic_messages:
      - constraint:
          ArgumentCount:
            Exact: 3
        message:
          Static: "'custom_tag' requires exactly two arguments"
    extracted_args:
      - name: arg1
        required: true
        kind: Variable
        position: 0
      - name: arg2
        required: true
        kind: Variable
        position: 1
    as_var: keep
filter_arities: {}
block_specs: {}
